recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:1: error: method tree overrides nothing
override def tree(steps:Int, length:Double, angle:Double, shrink:Double)    { steps match {
             ^