recursion.logo.tree.Tree.scala.code
override def tree(steps:Int, length:Double, angle:Double, shrink:Double)    { steps match {
                        case 6 => avance(0)
                         case _ => {current(steps) ; 
                                    gauche(45.0) ; 
                                    avance (length) ; 
                                    recule (length) ; 
                                    droite(180-45) ; 
                                    avance (length*shrink) ; 
                                    tree (steps + 1, length *shrink , angle , shrink)
}
} 
                                                                            }